--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,15 @@
 .score {
   text-align: center;
 }
+
+.block {
+  position: relative;
+}
+
+.won {
+  position: absolute;
+  text-align: center;
+  font-size: 35px;
+  top: 120px;
+  color: green;
+}
